--- a/src/Scss/_mixins.scss
+++ b/src/Scss/_mixins.scss
@@ -8,6 +8,6 @@
 }
 
 @mixin margin {
-  margin-left: 5px;
+  margin-left: 10px;
   margin-right: 5px;
 }
